edit rest api
